fixed slider on mobile- flexwrap, swal confirm button text is off on actual phone but not on devtools

--- a/frontend/src/components/events/addeventform.css
+++ b/frontend/src/components/events/addeventform.css
@@ -55,3 +55,10 @@ button {
     font: bold;
     font-size: 2rem;
 }
+
+#invitesTainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
